tg_parser/tests/type_errors/logic1_vs_logic_mismatch.tg
gate INV(in a; out y) {
    pmos drain=y, gate=a, source=VDD;
    nmos drain=y, gate=a, source=GND;
}

circuit Top(in x[1]; out z) {
    INV g1(x) -> z;
}

simulate Top(x=[0]);
